# Bible_Easy

./: .gitignore  CLAUDE.md  README.md  bible_easy.md  package.json
scripts/: convert_to_sqlite.js
src_fe/: index.html  main.js  styles.css
src_tauri_be/: Cargo.toml  tauri.conf.json
src_tauri_be/src/: accessibility.rs  bible_verse.rs  book_mappings.rs  db_query.rs  hangul.rs  keyboard_listener.rs  lib.rs  main.rs  pattern_parser.rs  settings.rs
